--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,9 +5,9 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    username: root
-    password: root
-    url: jdbc:mysql://localhost:3306/hotel?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=true
+    username: saos_fib_rw
+    password: PRaY0s8QgaOl3NRX
+    url: jdbc:mysql://devdb-mysql-dev.chj.cloud:30111/saos_fib?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=true
 mybatis:
   type-aliases-package: classpath*:cn.mafangui.hotel.entity
   mapper-locations: classpath*:mybatis/mapper/*.xml
